2011-07-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/src/msgmp.c: Getting a remote object does not start a critical
	section.

2011-07-18	Jennifer Averett <Jennifer.Averett@oarcorp.com>

	* score/src/threadenabledispatch.c: Modified to call
	_Thread_Dispatch_decrement_disable_level() instead of accessing the
	variable directly.

2011-07-18	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/malloc_report_statistics_plugin.c: Fixed format
	specifiers.

2011-07-15	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* score/Makefile.am, score/preinstall.am,
	score/include/rtems/score/isr.h, score/include/rtems/score/percpu.h:
	Split isrlevel into its own file to avoid a circular dependancy in
	smp code.
	* score/include/rtems/score/isrlevel.h: New file.

2011-07-14      Gene Smith <gene.smith@siemens.com>

	PR 1381/networking
	* netinet/ip_output.c: If a null or unreachable gateway is
	specified either statically in networkconfig.h or from dhcp/bootp,
	sendto() fails on multicast send with errno "118 Host is unreachable".
	The failure occurs in networking file ip_output.c since it currently
	requires all multicasts to have a valid route to the outside world.

2011-07-13	Till Straumann <strauman@slac.stanford.edu>

	PR 1775/filesystem
	* libfs/src/nfsclient/src/nfs.c: NFSAddress NFS issue where read/write
	problems when requested bytes greater than nfsStBlksize. Failure to
	create files and symlinks.

2011-07-13	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1824/cpukit
	* sapi/include/rtems/init.h, sapi/src/exinit.c, sapi/src/exshutdown.c:
	Return exit/shutdown status back to boot_card().

2011-07-11	Sebastien Bourdeauducq <sebastien.bourdeauducq@gmail.com>

	PR 1823/cpukit
	* libmisc/fb/fb.h: Added FBIOSETVIDEOMODE define.

2011-07-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/src/coremsg.c: Use 64-bit intermediate result on multiply to
	reliably detect overflow.

2011-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>
